optimize minlimit check
